# Multi-file-projects-and-libraries

1_задание/: CMakeLists.txt  half.cpp  half.h  main.cpp
2_задание/: CMakeLists.txt  half.cpp  half.h  main.cpp
3_задание/: CMakeLists.txt  Figure.h  Parallelogram.cpp  Parallelogram.h  Phombus.cpp  Phombus.h  Quadrilateral.cpp  Quadrilateral.h  Rectangle.cpp  Rectangle.h  Square.cpp  Square.h  Triangle.cpp  Triangle.h  equilateralTriangle.cpp  equilateralTriangle.h  half.cpp  half.h  isoscelesTriangle.cpp  isoscelesTriangle.h  main.cpp  rightTriangle.cpp  rightTriangle.h
