cmake_minimum_required(VERSION 3.21)
project(untitled15)

set(CMAKE_CXX_STANDARD 23)

add_executable(untitled15 main.cpp half.cpp half.h equilateralTriangle.cpp equilateralTriangle.h Figure.h isoscelesTriangle.cpp isoscelesTriangle.h Parallelogram.cpp Parallelogram.h Phombus.cpp Phombus.h Quadrilateral.cpp Quadrilateral.h Rectangle.cpp Rectangle.h rightTriangle.cpp rightTriangle.h Square.cpp Square.h Triangle.cpp Triangle.h)
